// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellBoolean should render an empty cell 1`] = `
<div
  className="tc-icon-text theme-tc-icon-text"
>
  <span
    className="theme-label"
  />
</div>
`;

exports[`CellBoolean should render an icon cell in a truthy case 1`] = `
<div
  className="tc-icon-text theme-tc-icon-text"
>
  <Icon
    name="talend-list"
  />
  <span
    className="theme-label"
  >
    list
  </span>
</div>
`;
